Added mysql configuration to docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,26 +7,28 @@ services:
       - "8000:8000"
     volumes:
       - .:/usr/src/app
-    # depends_on: 
-    #   - db
+    depends_on: 
+      - db
     
-  # db:
-  #   image: mysql
-  #   command: --default-authentication-plugin=mysql_native_password
-  #   env_file:
-  #     - .env
-  #   environment:
-  #     MYSQL_ROOT_PASSWORD: ${DB_PASS}
-  #     MYSQL_DATABASE: ${DB_NAME}
-  #   ports:
-  #     - 3306:3306
-  #   restart: always
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password --init-file /data/application/init.sql
+    env_file:
+      - .env
+    environment:
+      MYSQL_ROOT_PASSWORD: ${DB_PASS}
+      MYSQL_DATABASE: ${DB}
+    ports:
+      - 3306:3306
+    restart: always
+    volumes:
+      - ./sql/init.sql:/data/application/init.sql
 
-  # adminer:
-  #   image: adminer
-  #   restart: always
-  #   ports:
-  #     - 8080:8080
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
 
   swagger_ui:
     container_name: swagger_ui_service
