--- a/.env.defaults
+++ b/.env.defaults
@@ -1,2 +1,18 @@
+# MISC
 PORT=8000
 LOG_REQUEST=true
+ENV=dev
+
+# DB
+DB_HOSTNAME=127.0.0.1
+DB_PORT=3306
+DB=tpo
+DB_USER=root
+DB_PASS=example
+
+# Access token validity in ms
+JWT_ACCESS_TOKEN_EXP=600000
+# Refresh token validity in ms
+JWT_REFRESH_TOKEN_EXP=3600000
+# Secret secuirity string
+JWT_TOKEN_SECRET=HEGbulKGDblAFYskBLml
