--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,14 @@
 version: '3.1'
 
 services:
-  deno:
-    build: .
-    ports:
-      - "8000:8000"
-    volumes:
-      - .:/usr/src/app
-    depends_on: 
-      - db
+  # deno:
+  #   build: .
+  #   ports:
+  #     - "8000:8000"
+  #   volumes:
+  #     - .:/usr/src/app
+  #   depends_on: 
+  #     - db
     
   db:
     image: mysql
