Conexion con la BD

--- a/.env.defaults
+++ b/.env.defaults
@@ -4,11 +4,11 @@ LOG_REQUEST=true
 ENV=dev # prod
 
 # DB
-DB_HOSTNAME=127.0.0.1
+DB_HOSTNAME=192.168.230.129
 DB_PORT=3306
-DB=tpo
+DB=morfandoinc
 DB_USER=root
-DB_PASS=example
+DB_PASS=admin
 
 # Access token validity in ms
 JWT_ACCESS_TOKEN_EXP=600000
