--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "lodash": "^4.17.21",
     "moment": "^2.29.1",
     "morgan": "^1.10.0",
-    "mysql2": "^2.3.3",
     "nodemon": "^2.0.13",
     "object-mapper": "^6.2.0",
     "pg": "^8.6.0",
+    "postgres": "^3.3.1",
     "reflect-metadata": "^0.1.13",
     "typeorm": "^0.2.34"
   },
