Added sso to google provider

--- a/.env.default
+++ b/.env.default
@@ -14,6 +14,9 @@ CLOUD_NAME=
 api_key=
 api_secret=
 
+# GOOGLE SSO
+GOOGLE_CLIENT_ID=
+
 # Access token validity in ms
 JWT_ACCESS_TOKEN_EXP=600000
 # Refresh token validity in ms
